<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".place_order">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="-49dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="120dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/place_order"
            android:textColor="@color/orange"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/customer_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Enter_name"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="Enter name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/order_category"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:hint="Select pastry type"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="241dp"
            android:layout_height="27dp"
            android:layout_marginLeft="15dp"
            android:background="@color/browser_actions_bg_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Enter_Quantity"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="Enter quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_info"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/Additional_Information"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:hint="Enter more info on pastry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/date_due"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText

            android:id="@+id/editTextDate"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="date" />

        <Button
            android:id="@+id/btn3"
            android:name="otheractivity"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_below="@+id/imageView"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/green"
            android:onClick="Confirm_Order"
            android:text="PLACE ORDER"
            android:textSize="25sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>