<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="-29dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/cheflogo" />

        <TextView
            android:layout_width="wrap_content"


            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alluraregular"
            android:text="Login "
            android:textColor="@color/orange"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_text_email1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:hint="Enter email address"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_text_password1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:hint="Enter password"
            android:maxLines="1"
            android:inputType="textPassword" />

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_below="@+id/btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/orange"
            android:onClick="Login_baker"
            android:text="@string/sign_in"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/ForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:onClick="ForgotPassword"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:gravity="center"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>